[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/EndPoint.tscn" type="PackedScene" id=1]
[ext_resource path="res://Prefabs/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Prefabs/PickUp.tscn" type="PackedScene" id=3]
[ext_resource path="res://Prefabs/PlayerBody.tscn" type="PackedScene" id=4]
[ext_resource path="res://walls.tres" type="TileSet" id=6]
[ext_resource path="res://Assets/bg.png" type="Texture" id=8]
[ext_resource path="res://Assets/zombie_icons.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Timer.gd" type="Script" id=11]
[ext_resource path="res://Assets/sfxmusic.wav" type="AudioStream" id=13]

[node name="MainGame" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="TimerTXT" type="Label" parent="CanvasLayer"]
margin_left = 46.2458
margin_top = 35.165
margin_right = 90.2458
margin_bottom = 49.165
rect_scale = Vector2( 3, 3 )
text = "Timer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyCountTXT" type="Label" parent="CanvasLayer"]
margin_left = 46.686
margin_top = 72.3299
margin_right = 105.686
margin_bottom = 86.3299
rect_scale = Vector2( 3, 3 )
text = "Enemies"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletsCountTXT" type="Label" parent="CanvasLayer"]
margin_left = 46.1649
margin_top = 110.482
margin_right = 99.1649
margin_bottom = 125.482
rect_scale = Vector2( 3, 3 )
text = "Bullets"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPCountTXT" type="Label" parent="CanvasLayer"]
margin_left = 48.9239
margin_top = 157.452
margin_right = 101.924
margin_bottom = 172.452
rect_scale = Vector2( 3, 3 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zombie_icons" type="Sprite" parent="CanvasLayer"]
position = Vector2( 32.0186, 89.9644 )
scale = Vector2( 0.14609, 0.142413 )
texture = ExtResource( 9 )
vframes = 4
hframes = 8
frame = 2

[node name="zombie_icons3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 30.4062, 56.1647 )
scale = Vector2( 0.163283, 0.166483 )
texture = ExtResource( 9 )
vframes = 4
hframes = 8
frame = 28

[node name="zombie_icons2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 30.914, 127.932 )
scale = Vector2( 0.268157, 0.219779 )
texture = ExtResource( 9 )
vframes = 4
hframes = 8
frame = 7

[node name="zombie_icons4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 26.9324, 172.583 )
scale = Vector2( 0.192613, 0.186451 )
texture = ExtResource( 9 )
vframes = 4
hframes = 8
frame = 1

[node name="AmmoBox2" parent="." instance=ExtResource( 3 )]
position = Vector2( 171.248, 437.861 )
ammountGive = 10

[node name="AmmoBox6" parent="." instance=ExtResource( 3 )]
position = Vector2( -556.814, 619.179 )
ammountGive = 10

[node name="AmmoBox8" parent="." instance=ExtResource( 3 )]
position = Vector2( -607.025, -55.8822 )
ammountGive = 10

[node name="AmmoBox9" parent="." instance=ExtResource( 3 )]
position = Vector2( 748.677, -432.466 )
ammountGive = 10

[node name="AmmoBox7" parent="." instance=ExtResource( 3 )]
position = Vector2( 1658.06, 758.655 )
ammountGive = 10

[node name="AmmoBox3" parent="." instance=ExtResource( 3 )]
position = Vector2( 1193.42, 242.713 )
ammountGive = 10

[node name="AmmoBox4" parent="." instance=ExtResource( 3 )]
position = Vector2( 2056.65, -142.308 )
ammountGive = 10

[node name="AmmoBox5" parent="." instance=ExtResource( 3 )]
position = Vector2( 2054.89, -437.667 )
ammountGive = 10

[node name="PlayerBody" parent="." instance=ExtResource( 4 )]

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
z_index = -1
tile_set = ExtResource( 6 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -327688, 14, 0, -327687, 14, 0, -327686, 14, 0, -327684, 5, 0, -327683, 14, 0, -327682, 13, 0, -393216, 5, 0, -393215, 14, 0, -393212, 5, 0, -393211, 14, 0, -393208, 13, 0, -393207, 14, 0, -393206, 14, 0, -393205, 14, 0, -393204, 13, 0, -393203, 14, 0, -393202, 14, 0, -393201, 14, 0, -393200, 13, 0, -393199, 14, 0, -393198, 14, 0, -393196, 13, 1, -393195, 13, 1, -393194, 18, 0, -262152, 16, 0, -262150, 6, 0, -262148, 8, 0, -262147, 6, 0, -327680, 8, 0, -327678, 6, 0, -327676, 8, 0, -327665, 6, 0, -327662, 6, 0, -327658, 17, 0, -196616, 16, 0, -196614, 6, 0, -196611, 6, 0, -262142, 6, 0, -262137, 17, 0, -262136, 17, 0, -262135, 5, 0, -262133, 17, 0, -262131, 14, 0, -262130, 5, 0, -262129, 14, 0, -262128, 14, 0, -262127, 5, 0, -262126, 14, 0, -262124, 15, 0, -262123, 13, 2, -262122, 17, 0, -131080, 14, 0, -131079, 14, 0, -131078, 14, 0, -131077, 5, 0, -131076, 14, 0, -131075, 14, 0, -131074, 14, 0, -131073, 5, 0, -196608, 14, 0, -196607, 13, 2, -196606, 14, 0, -196605, 14, 0, -196604, 5, 0, -196603, 15, 0, -196602, 5, 0, -196601, 18, 0, -196600, 17, 0, -196597, 17, 0, -196595, 16, 0, -196594, 8, 0, -196593, 4, 0, -196590, 9, 0, -196589, 6, 0, -196587, 9, 0, -196586, 17, 0, -65544, 16, 0, -65543, 4, 0, -65541, 9, 0, -65540, 9, 0, -65539, 9, 0, -65538, 9, 0, -65537, 9, 0, -131070, 9, 0, -131064, 17, 0, -131062, 4, 0, -131061, 17, 0, -131059, 16, 0, -131053, 6, 0, -131050, 17, 0, -8, 16, 0, -65528, 17, 0, -65526, 5, 0, -65525, 17, 0, -65523, 16, 0, -65521, 14, 0, -65520, 14, 0, -65519, 5, 0, -65518, 14, 0, -65517, 13, 0, -65516, 5, 0, -65514, 17, 0, 65528, 14, 0, 65529, 13, 0, 65530, 15, 0, 65532, 17, 0, 65534, 16, 0, 65535, 4, 0, 2, 9, 0, 4, 14, 0, 5, 5, 0, 6, 13, 1, 7, 14, 0, 8, 13, 1, 9, 5, 0, 10, 13, 1, 13, 16, 0, 15, 9, 0, 18, 9, 0, 22, 17, 0, 131064, 16, 0, 131065, 10, 0, 131067, 4, 0, 131068, 17, 0, 131070, 16, 0, 131071, 6, 0, 65538, 17, 0, 65542, 6, 0, 65545, 9, 0, 65549, 16, 0, 65556, 6, 0, 65558, 17, 0, 196600, 16, 0, 196601, 4, 0, 196604, 17, 0, 196606, 16, 0, 196607, 6, 0, 131074, 17, 0, 131078, 6, 0, 131085, 16, 0, 131086, 9, 0, 131088, 9, 0, 131092, 6, 0, 131094, 17, 0, 262136, 16, 0, 262142, 16, 0, 262143, 4, 0, 196610, 17, 0, 196612, 14, 0, 196613, 5, 0, 196614, 13, 0, 196615, 14, 0, 196616, 15, 0, 196617, 14, 0, 196618, 5, 0, 196619, 13, 1, 196621, 14, 0, 196622, 13, 0, 196623, 14, 0, 196625, 5, 0, 196626, 13, 2, 196630, 17, 0, 327672, 14, 0, 327673, 5, 0, 327675, 5, 0, 327676, 17, 0, 327678, 16, 0, 327679, 10, 0, 262144, 10, 0, 262146, 17, 0, 262154, 9, 0, 262165, 5, 0, 262166, 17, 0, 393208, 16, 0, 393209, 5, 0, 393210, 10, 0, 393211, 5, 0, 393212, 17, 0, 393214, 14, 0, 393215, 5, 0, 327680, 15, 0, 327681, 13, 2, 327682, 14, 0, 327683, 5, 0, 327684, 13, 1, 327689, 14, 0, 327690, 13, 0, 327691, 15, 0, 327692, 13, 0, 327693, 17, 0, 327696, 17, 0, 327698, 16, 0, 327702, 17, 0, 458744, 16, 0, 458745, 5, 0, 458747, 5, 0, 393223, 6, 0, 393225, 16, 0, 393226, 6, 0, 393229, 17, 0, 393230, 5, 0, 393232, 17, 0, 393234, 16, 0, 393235, 5, 0, 393237, 4, 0, 393238, 17, 0, 524280, 16, 0, 524281, 5, 0, 524285, 6, 0, 458755, 17, 0, 458757, 16, 0, 458759, 6, 0, 458761, 16, 0, 458765, 17, 0, 458766, 8, 0, 458768, 17, 0, 458770, 16, 0, 458771, 8, 0, 458773, 4, 0, 458774, 17, 0, 589816, 14, 0, 589817, 5, 0, 589818, 5, 0, 589819, 15, 0, 589820, 17, 0, 589823, 5, 0, 524290, 5, 0, 524291, 17, 0, 524293, 16, 0, 524297, 16, 0, 524300, 4, 0, 524301, 17, 0, 524303, 5, 0, 524304, 17, 0, 524306, 16, 0, 524309, 5, 0, 524310, 17, 0, 655352, 16, 0, 655356, 17, 0, 589824, 9, 0, 589827, 17, 0, 589829, 16, 0, 589830, 9, 0, 589831, 9, 0, 589839, 8, 0, 589840, 17, 0, 589842, 16, 0, 589843, 9, 0, 589845, 8, 0, 589846, 17, 0, 720888, 16, 0, 720891, 10, 0, 720892, 17, 0, 720895, 14, 0, 655360, 5, 0, 655361, 15, 0, 655362, 13, 0, 655365, 14, 0, 655366, 5, 0, 655367, 13, 2, 655368, 15, 0, 655369, 18, 0, 655370, 6, 0, 655372, 14, 0, 655373, 5, 0, 655374, 13, 2, 655375, 5, 0, 655378, 14, 0, 655379, 5, 0, 655380, 15, 0, 655381, 5, 0, 655382, 17, 0, 786424, 16, 0, 786425, 6, 0, 786428, 17, 0, 786431, 16, 0, 720896, 8, 0, 720899, 6, 0, 720902, 8, 0, 720905, 17, 0, 720906, 6, 0, 720913, 6, 0, 720918, 17, 0, 851960, 16, 0, 851961, 10, 0, 786435, 6, 0, 786440, 10, 0, 786441, 17, 0, 786442, 10, 0, 786446, 9, 0, 786449, 6, 0, 786453, 9, 0, 786454, 17, 0, 917496, 14, 0, 917500, 14, 0, 851968, 14, 0, 851969, 14, 0, 851970, 14, 0, 851971, 14, 0, 851972, 14, 0, 851973, 14, 0, 851977, 14, 0, 851978, 14, 0, 851979, 14, 0, 851980, 14, 0, 851981, 14, 0, 851982, 14, 0, 851983, 14, 0, 851984, 14, 0, 851985, 14, 0, 851986, 14, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.419608, 0.113725, 0.113725, 1 )
position = Vector2( 728.888, 382.865 )
scale = Vector2( 11.4087, 7.55117 )
z_index = -2
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="ENEMIES" type="Node2D" parent="."]

[node name="Enemy" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -63.3898, 1198.98 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Enemy28" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 696.104, 1188.43 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Enemy2" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -260.296, 567.824 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy11" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -258.538, 346.305 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy13" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -269.086, 35.1239 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy14" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 328.664, 68.5276 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy15" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1170.79, -316.494 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy19" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 571.28, -381.543 )
rotation = -0.261799
scale = Vector2( 1.5, 1.5 )

[node name="Enemy20" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 263.615, -370.994 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy21" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -10.647, -341.107 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy22" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -143.073, -351.823 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy23" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -261.393, -342.635 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy24" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -131.299, -429.011 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy16" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1172.55, -186.395 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy17" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1176.06, -61.571 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy27" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1364.18, 123.028 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy18" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1696.46, -158.266 )
rotation = 3.0052
scale = Vector2( 1.5, 1.5 )

[node name="Enemy12" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( -671.688, 332.241 )
scale = Vector2( 1.5, 1.5 )

[node name="Enemy3" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 407.778, 741.875 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy4" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 747.089, 525.63 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy7" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1388.79, 529.146 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy8" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1483.73, 530.905 )
rotation = 1.57079
scale = Vector2( 1.5, 1.5 )

[node name="Enemy5" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1037.17, 1037.23 )
rotation = 4.37302
scale = Vector2( 1.5, 1.5 )

[node name="Enemy6" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1313.19, 910.652 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Enemy9" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1626.13, 1104.04 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="Enemy25" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1939.07, 750.666 )
rotation = 4.45058
scale = Vector2( 1.5, 1.5 )

[node name="Enemy26" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1968.96, 569.583 )
rotation = 3.92699
scale = Vector2( 1.5, 1.5 )

[node name="Enemy10" parent="ENEMIES" instance=ExtResource( 2 )]
position = Vector2( 1620.86, 1197.22 )
rotation = 3.14159
scale = Vector2( 1.5, 1.5 )

[node name="EndPoint" parent="." instance=ExtResource( 1 )]
position = Vector2( -668, -398 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -15.0
autoplay = true
